--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ mothur*logfile
 head.batch
 tail.batch
 code/swarm
-code/vsearch
+code/vsearch*
 code/sumaclust_v1.0.20
 code/NINJA-OPS
 
+.snakemake/
